# face_in_social_network

./: CMakeLists.txt  album_generator.cc  analysis.cc  analysis_edge_roc.cc  baseline.cc  baseline_all.cc  contagion.cc  draw_intermediate_results.sh  edge_discover_main.cc  final_readout.cc  generator_driver.cc  graph_utility_test.cc  hist_image.cc  main.cc
classifier/: .base_classifier.h.swp  .pca_classifier.cc.swp  base_ambiguous_classifier.h  base_classifier.h  base_classifier_driver.h  bayes_classifier.cc  bayes_classifier.h  inner_bayes_ambiguous_classifier.cc  inner_bayes_ambiguous_classifier.h  inner_bayes_classifier.cc  inner_bayes_classifier.h  pca_ambiguous_classifier.cc  pca_ambiguous_classifier.h  pca_classifier.cc  pca_classifier.h  photo_result.cc  photo_result.h  stat_model_classifier.cc  stat_model_classifier.h  train_test_on_album.cc  train_test_on_album.h
data_script/: degree_distribution.cc  extract_sub_v2.cc
dataset/: .base_behavior.h.swp  .bfs_cross_contagion_engine.cc.swp  .bfs_face_recognition_visitor.cc.swp  .photo.cc.swp  .simple_behavior.cc.swp  .simple_behavior.h.swp  album.h  base_behavior.h  base_contagion_engine.h  base_visitor.h  bfs_cross_contagion_engine.cc  bfs_cross_contagion_engine.h  bfs_face_recognition_visitor.cc  bp_ambiguous_contagion_engine.cc  bp_ambiguous_contagion_engine.h  bp_contagion_engine.cc  bp_contagion_engine.h  parallel_cross_contagion_engine.cc  parallel_cross_contagion_engine.h  person.cc.not_used  person.h.not_used  photo.cc  photo.h  simple_behavior.cc  simple_behavior.h  social_graph.cc  social_graph.h
edge_discover/: edge_discover.cc  edge_discover.h  edge_discover_baseline.cc  edge_discover_baseline.h
random_generator/: album_generator.cc.not_used  album_generator.h.not_used  edge_generator.cc  edge_generator.h  infection_source_generator.cc  label_generator.cc  random_generators.cc  random_generators.h  remove_edges.cc
scripts/: album_generator.sh  analysis_intermediate_results.sh  contagion.sh  extract_standford.sh  run.sh  run2.sh  run3.sh  run_exp2.sh  run_exp2_batch.sh
